2000-08-27  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-collate.c (insert_weights): Also update
	backpointer of next element.
	(collate_read): Allow definition of new collation symbols in stage 2.
	Symbol after reorder-after can be UCS4 value.
	Allow reordering of collation symbols and elements.
	Do not only move reorder entry in new position.  Instead call
	insert_weight to do this and read the weights.

	* locale/findlocale.c (free_mem): Add cast to avoid warning.

	* intl/dcigettext.c (DCIGETTEXT): Remove _nl_find_language in code
	to determine invalid locale name.
	* locale/findlocale.c (_nl_find_locale): Likewise.

	* posix/annexc.c: Correct test for unavailable feature.

	* sysdeps/unix/sysv/linux/i386/sys/io.h (outw): Fix __INLINE ->
	__inline.

2000-08-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/syscalls.list: Add getdents64
	syscall.

	* sysdeps/unix/sysv/linux/arm/Makefile [$(subdir)==resource]
	(sysdep_routines): Add oldgetrlimit64.

	* elf/Makefile (distribute): Add unloadmod.c, reldepmod1.c,
	reldepmod2.c, reldepmod3.c, and reldepmod4.c.
	(tests): Add unload, reldep, reldep2, and reldep3.
	(modules-names): Add unloadmod, reldepmod1, reldepmod2, reldepmod3,
	and reldepmod4.
	Add rules to build and run unload, reldep, reldep2, and reldep3.
	* elf/dl-lookup.c (_dl_lookup_symbol): Add new parameter explicit.
	Don't create relocation dependency if it is nonzero.
	(_dl_lookup_symbol_skip): Remove relocation dependency stuff.  This
	can never happen here.
	(_dl_lookup_versioned_symbol): Add new parameter explicit.
	Don't create relocation dependency if it is nonzero.
	(_dl_lookup_versioned_symbol_skip): Remove relocation dependency
	stuff.  This can never happen here.
	* sysdeps/generic/ldsodefs.h: Change prototypes.
	* elf/dl-reloc.c (RESOLVE_MAP): Pass 0 in explicit parameter to
	_dl_lookup_up and _dl_lookup_versioned_symbol.
	(RESOLV): Likewise.
	* elf/dl-runtime.c (fixup): Likewise.