@@ -1,3 +1,10 @@
+2000-08-27  Geoff Keating  <geoffk@cygnus.com>
+
+	* sysdeps/powerpc/fpu/fedisblxcpt.c: New file.
+	* sysdeps/powerpc/fpu/feenablxcpt.c: New file.
+	* sysdeps/powerpc/fpu/fegetexcept.c: New file.
+	* sysdeps/unix/sysv/linux/powerpc/fe_nomask.c: New file.
+
 2000-08-27  Ulrich Drepper  <drepper@redhat.com>
 
 	* locale/programs/ld-collate.c (insert_weights): Also update
